<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="275dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/p_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/one"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:contentDescription="@string/choco_cake"
            app:srcCompat="@drawable/cake" />

        <ImageView
            android:id="@+id/two"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:contentDescription="@string/muffins"
            app:srcCompat="@drawable/muffin" />

    </LinearLayout>

    <TextView
        android:id="@+id/c_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="7dp"
        android:text="@string/cake"
        app:layout_constraintBottom_toTopOf="@+id/c_rating"
        app:layout_constraintEnd_toStartOf="@+id/m_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/c_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="51dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/m_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_name" />

    <TextView
        android:id="@+id/m_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="8dp"
        android:text="@string/muffin"
        app:layout_constraintBottom_toTopOf="@+id/m_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/c_name"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/m_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="51dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/c_rating"
        app:layout_constraintTop_toBottomOf="@+id/m_name" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="300dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/four"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:contentDescription="@string/croissants"
            app:srcCompat="@drawable/croissant" />

        <ImageView
            android:id="@+id/three"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:contentDescription="@string/pie"
            app:srcCompat="@drawable/pie" />
    </LinearLayout>

    <TextView
        android:id="@+id/cr_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="11dp"
        android:text="@string/croissant"
        app:layout_constraintBottom_toTopOf="@+id/cr_rating"
        app:layout_constraintEnd_toStartOf="@+id/p_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/cr_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="180dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/p_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cr_name" />

    <TextView
        android:id="@+id/p_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="12dp"
        android:text="@string/pies"
        app:layout_constraintBottom_toTopOf="@+id/cr_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cr_name"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/p_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="211dp"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cr_rating"
        app:layout_constraintTop_toBottomOf="@+id/p_name" />

</androidx.constraintlayout.widget.ConstraintLayout>